Global: Add missing border top popover arrows - fixes #682

--- a/github-dark.css
+++ b/github-dark.css
@@ -517,6 +517,11 @@
   .gist-quicksearch-results .gist-quicksearch-result-group:first-child {
     border-top: 0 !important;
   }
+  /* auto-generated rule for "border-top-color: rgba(27,31,35,0.15)" */
+  .Popover-message--bottom:before, .Popover-message--bottom-right:before,
+  .Popover-message--bottom-left:before {
+    border-top-color: #343434 !important;
+  }
   /* auto-generated rule for "border-bottom-color: rgba(27,31,35,0.15)" */
   .Popover-message:before, .dropdown-menu:before,
   .diffbar-range-menu .in-range:not([aria-selected="true"]):not(.is-range-selected),
@@ -2270,8 +2275,7 @@
     filter: grayscale(100%) contrast(1.5) !important;
   }
   /* invert (rgb) */
-  #header .logo,
-  img[src="/images/logo@2x.png"], .site-logo a,
+  #header .logo, img[src="/images/logo@2x.png"], .site-logo a,
   .github-jobs-promotion a.jobs-logo strong, iframe[src*="polldaddy.com"],
   .jstree-node:not(.jstree-leaf) > .jstree-icon.jstree-ocl,
   .octotree_toggle .loader, .swipe .swipe-frame .swipe-bar .top-handle,
